# telemetry

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: TelemetryLogger.hpp
src/: TelemetryLogger.cpp
viewer/: README.md  requirements.txt  telemetry_viewer
viewer/gui/: gui.py
viewer/serie_parser/: serie_parser.py
viewer/telemetry_values/: telemetry_values.py
